# sealed-sender

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
examples/: replay_protection.rs  unseal.rs
src/: certificate.rs  error.rs  lib.rs  replay.rs  sealed_sender.rs  types.rs  wire.rs
tests/: integration.rs
