[package]
name = "sealed-sender"
version = "0.1.0"
edition = "2024"
description = "Sealed sender for MLS: server-side sender anonymity via two-stage ECIES"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/hushwire/sealed-sender"
keywords = ["mls", "sealed-sender", "ecies", "e2ee", "privacy"]
categories = ["cryptography", "no-std"]

[dependencies]
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
ed25519-dalek = { version = "2.2", features = ["std", "rand_core"] }
sha2 = "0.10"
hkdf = "0.12"
zeroize = { version = "1", features = ["derive"] }
postcard = { version = "1.1", features = ["alloc"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2"
rand_core = { version = "0.6", features = ["getrandom"] }
subtle = "2"
mls-rs-core = { version = "0.27", optional = true }
uuid = { version = "1", optional = true }

[dev-dependencies]
uuid = { version = "1", features = ["v4"] }

[features]
default = []
mls-rs = ["dep:mls-rs-core"]
uuid = ["dep:uuid"]
